refactor(build): Updated build system

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-tmp/*
-bin/*
+.DS_Store
+.vscode/
+**/bin/*
 coverage/*
-vendor/*/*
-
-*.csv
-*.yml
-*.yaml
+dist/*
+tmp/*
+vendor/*
+output/*
+Release/*
+**/obj/*
+**/.vs/*
+*.msi
+*.nupkg
+build/package/chocolatey/tools/LICENSE.txt
