--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,3 @@
-# This file contains all available configuration options
-# with their default values.
-
 # options for analysis running
 run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
@@ -12,12 +9,8 @@ run:
   # include test files or not, default is true
   tests: true
 
-
 # all available settings of specific linters
 linters-settings:
-  funlen:
-    lines: 150
-    statements: 100
   govet:
     # report about shadowed variables
     check-shadowing: true
@@ -41,13 +34,30 @@ linters-settings:
   lll:
     # max line length, lines longer will be reported. Default is 120.
     # '\t' is counted as 1 character by default, and can be changed with the tab-width option
-    line-length: 180
+    line-length: 150
 
 linters:
-  enable-all: true
-  disable:
-    - dupl
-    - gochecknoglobals
-    - godox
-    - interfacer
+  disable-all: true
+  enable:
+    - deadcode
+    - errcheck
+    - gocyclo
+    - gofmt
+    - golint
+    - gosimple
+    - govet
+    - ineffassign
+    - maligned
+    - misspell
+    - staticcheck
+    - structcheck
+    - unconvert
+    - unused
+    - varcheck
+    - vet
+
+issues:
+  # disable limits on issue reporting
+  max-per-linter: 0
+  max-same-issues: 0
 
