--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -31,7 +31,7 @@ jobs:
         dockerfile: build/package/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: newrelic/cli
+        repository: newrelic/nri-network-telemetry
         tags: snapshot
         add_git_labels: true
 
